# topological_constrained_neural_network

./: MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
src/topological_constrained/: main.py
src/topological_constrained/conf/: conf_file.py
src/topological_constrained/dataset/: dataset.py
src/topological_constrained/model/: model.py
src/topological_constrained/train/: loss.py  registration.py  spline_interpolation.py  train.py  utils.py
